Bug 1398500 part 1.  Switch the viewport scrollbar override stuff to use Element, not nsIContent.  r=dholbert

MozReview-Commit-ID: FU0Afemj4XD